tests/fixtures/TypeConversionFunctionTests/errors/string_no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(String())

